[project]
name = "doughstash"
version = "0.1.0"
description = "An app to manage personal finances and investments."
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = ["ruff>=0.8"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "N",    # pep8-naming
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
docstring-code-format = true
